# QsPlot

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
infra/dep/glad/include/glad/: glad.h
infra/dep/glad/src/: glad.c
infra/docs/: api_reference.md  user_guide.md
infra/scripts/: build_project.ps1  setup_dependencies.ps1
src/qsplot/: __init__.py  core.py  processor.py  wrapper.py
src/qsplot/bindings/: bind_main.cpp
src/qsplot/core/: DataProcessor.cpp  DataProcessor.h
src/qsplot/graphics/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  RendererConfig.h  Renderer_Picking.cpp  Renderer_callbacks.cpp  Shader.h
src/qsplot/utils/: imputer.py
tests/: __init__.py  test_imputer.py  test_output.txt  test_phase0.py  test_processor.py  test_visualizer.py
